# A-Maze-ing-2.0

./: .gitignore  LICENSE.md  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
display/: __init__.py  ascii_renderer.py  color.py
mazegen/: maze_generator.py
parser/: __init__.py  config_parser.py  config_reader.py
solve/: __init__.py  resolve_dfs.py
