[project]
name = "mazegen"
version = "1.0.0"
description = "Standalone maze generator module"
authors = [
    {name = "rerandri"},
    {name = "rirazafi"}
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["mazegen*"]
